Move generator code to the new Generator module